# soilgrids

./: .editorconfig  README-todo  README.md  data  docker_env  environment.yml  mypy.ini  setup.cfg  test
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: installation_and_basic_usage.ipynb
scripts/: lint
src/stactools/soilgrids/: __init__.py  cog.py  commands.py  constants.py  stac.py  test  test.py
tests/: test_commands.py  test_module.py  test_stac.py
