[metadata]
name = stactools-soilgrids
version = attr: stactools.soilgrids.__version__
description = SoilGridsTM is a system for global digital soil mapping that uses state-of-the-art machine learning methods to map the spatial distribution of soil properties across the globe.
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/soilgrids
project_urls =
    Documentation = https://stactools-soilgrids.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/soilgrids/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.2.3

[options.packages.find]
where = src
